--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "netlify-identity-widget": "^1.9.2",
     "next": "12.2.3",
     "next-auth": "^4.10.2",
