--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "next": "12.2.3",
     "next-auth": "^4.10.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "styled-components": "^5.3.5",
+    "tailwindcss": "^3.1.8"
   },
   "devDependencies": {
     "eslint": "8.20.0",
