--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "netlify-identity-widget": "^1.9.2",
     "next": "12.2.3",
     "next-auth": "^4.10.2",
+    "next-router": "^1.3.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "styled-components": "^5.3.5",
