--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "axios": "^0.27.2",
+    "html-entities": "^2.3.3",
     "netlify-identity-widget": "^1.9.2",
     "next": "12.2.3",
     "next-auth": "^4.10.2",
